src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an agreement</description>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <description>Approval status of the agreement line item</description>
        <inlineHelpText>Approval status of the agreement line item</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>In preparation</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>PAYU</fullName>
                </value>
                <value>
                    <fullName>PAYG</fullName>
                </value>
                <value>
                    <fullName>AYCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the asset associated with the product</description>
        <inlineHelpText>ID of the asset associated with the product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item from which the line item is created.</description>
        <inlineHelpText>ID of the associated asset line item from which the line item is created.</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <label>Attribute Value</label>
        <referenceTo>Apttus_CMConfig__AgreementProductAttributeValue__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order line item associated with the agreement line item will be automatically activated when the agreement is executed.</description>
        <inlineHelpText>Indicates whether the order line item associated with the agreement line item will be automatically activated when the agreement is executed.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoCreateBill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether billing schedules would be created for the order line item associated with the agreement line item when the agreement is executed.</description>
        <inlineHelpText>Indicates whether billing schedules would be created for the order line item associated with the agreement line item when the agreement is executed.</inlineHelpText>
        <label>Auto Create Bill ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoCreateRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether revenue schedules would be created for the order line item associated with the agreement line item when the agreement is executed.</description>
        <inlineHelpText>Indicates whether revenue schedules would be created for the order line item associated with the agreement line item when the agreement is executed.</inlineHelpText>
        <label>Auto Create Revenue ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recurring item would auto renew at end of term</description>
        <inlineHelpText>Indicates whether the recurring item would auto renew at end of term</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoRenewalTerm__c</fullName>
        <description>The auto renewal term</description>
        <inlineHelpText>The auto renewal term</inlineHelpText>
        <label>Auto Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseCostOverride__c</fullName>
        <description>The base cost overridden by the user</description>
        <inlineHelpText>The base cost overridden by the user</inlineHelpText>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <inlineHelpText>The base cost is Cost + Automatic Adjustments for individual products and options</inlineHelpText>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <inlineHelpText>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</inlineHelpText>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Term (if applicable) X (Base Price + Price Adjustment) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BasePriceOverride__c</fullName>
        <description>The base price overridden by the user</description>
        <inlineHelpText>The base price overridden by the user</inlineHelpText>
        <label>Base Price (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product.</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items (Base Product)</relationshipLabel>
        <relationshipName>BaseAgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Bill To)</relationshipLabel>
        <relationshipName>AgreementLineItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ChargeType__c</fullName>
        <description>The charge type associated with the product or service</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ClassificationHierarchy__c</fullName>
        <description>The category hierarchy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product category</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__CommitmentQuantity__c</fullName>
        <description>The quantity commitment associated with the product or option</description>
        <inlineHelpText>The quantity commitment associated with the product or option</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ContractNumbers__c</fullName>
        <description>A comma separated list of contract numbers associated with the line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A comma separated list of contract numbers associated with the line item</inlineHelpText>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Cost__c</fullName>
        <description>The cost for the product or service with no adjustments</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__DeltaPrice__c</fullName>
        <description>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__DeltaQuantity__c</fullName>
        <description>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__DerivedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the line item this was derived from</description>
        <label>Derived From</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Derived Agreement Line Items</relationshipLabel>
        <relationshipName>DerivedAgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__EffectiveDate__c</fullName>
        <description>The effective date for products and services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__EndDate__c</fullName>
        <description>The end date for products and services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</description>
        <inlineHelpText>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ExtendedDescription__c</fullName>
        <description>The extended line description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Extended Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ExtendedQuantity__c</fullName>
        <description>The extended quantity is Quantity X Parent Quantity)</description>
        <inlineHelpText>The extended quantity is Quantity X Parent Quantity)</inlineHelpText>
        <label>Extended Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FlatOptionPrice__c</fullName>
        <description>The rolled up adjusted flat price of options for the bundle product</description>
        <inlineHelpText>The rolled up adjusted flat price of options for the bundle product</inlineHelpText>
        <label>Flat Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Frequency__c</fullName>
        <description>The pricing frequency associated with the recurring or usage price</description>
        <label>Pricing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FulfilledQuantity__c</fullName>
        <description>The Total quantity fulfilled for the order line items created against the agreement line item</description>
        <inlineHelpText>The Total quantity fulfilled for the order line items created against the agreement line item</inlineHelpText>
        <label>Fulfilled Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FulfillmentStatus__c</fullName>
        <description>The order fulfillment line status</description>
        <inlineHelpText>The order fulfillment line status</inlineHelpText>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Fulfilled</fullName>
                    <default>true</default>
                    <label>Not Fulfilled</label>
                </value>
                <value>
                    <fullName>Partially Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__GroupAdjustmentPercent__c</fullName>
        <description>The group adjustment percent</description>
        <label>Group Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Guidance__c</fullName>
        <description>The pricing guidance associated with the line item</description>
        <inlineHelpText>The pricing guidance associated with the line item</inlineHelpText>
        <label>Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <inlineHelpText>Indicates whether the product has attributes.</inlineHelpText>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__HasIncentives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are one or more incentives associated with the line item</description>
        <inlineHelpText>Indicates whether there are one or more incentives associated with the line item</inlineHelpText>
        <label>Has Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <inlineHelpText>Indicates whether the product has options.</inlineHelpText>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the item would be hidden in the invoice display.</description>
        <inlineHelpText>Indicates whether the item would be hidden in the invoice display.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentiveAdjustmentAmount__c</fullName>
        <description>The incentive adjustment amount</description>
        <inlineHelpText>The incentive adjustment amount</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentiveExtendedPrice__c</fullName>
        <description>The incentive extended price is Quantity X Incentive Base Price X Term (if applicable) for individual products and options</description>
        <inlineHelpText>The incentive extended price is Quantity X Incentive Base Price X Term (if applicable) for individual products and options</inlineHelpText>
        <label>Incentive Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentiveType__c</fullName>
        <description>The incentive type</description>
        <inlineHelpText>The incentive type</inlineHelpText>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsAssetPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset pricing is in effect for the line item</description>
        <inlineHelpText>Indicates whether asset pricing is in effect for the line item</inlineHelpText>
        <label>Is Asset Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsCustomPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether custom pricing is in effect for the line item</description>
        <inlineHelpText>Indicates whether custom pricing is in effect for the line item</inlineHelpText>
        <label>Is Custom Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsOptionRollupLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is an option rollup line</description>
        <label>Is Option Rollup Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is optional</description>
        <inlineHelpText>Indicates whether the line item is optional</inlineHelpText>
        <label>Is Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the product or option</description>
        <label>Is Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsPrimaryRampLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</description>
        <inlineHelpText>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</inlineHelpText>
        <label>Is Primary Ramp Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ItemSequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sequence of items belonging to a line</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineStatus__c</fullName>
        <description>The line status</description>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                    <default>true</default>
                    <label>Product/Service</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>